<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menus.ActivityEditMenu">

    <Button
        android:id="@+id/edit_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_activity_title" />

    <Button
        android:id="@+id/edit_remove_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/remove_text"
        app:layout_constraintEnd_toEndOf="@+id/edit_add_button"
        app:layout_constraintStart_toStartOf="@+id/edit_add_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_add_button" />

    <TextView
        android:id="@+id/edit_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/edit_devices"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Button-->
        <!--android:id="@+id/edit_reorder_button"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:text="@string/reorder_text"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/edit_remove_button"-->
        <!--app:layout_constraintStart_toStartOf="@+id/edit_remove_button"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/edit_remove_button" />-->

</android.support.constraint.ConstraintLayout>